--- a/html/login_psw.html
+++ b/html/login_psw.html
@@ -7,6 +7,7 @@
 		<script src="js/login.js" type="text/javascript" charset="utf-8"></script>
 	
 		<link rel="stylesheet" type="text/css" href="css/login.css"/>
+		<script src="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 	</head>
 	<body>
 		
@@ -93,9 +94,9 @@
 				</div>
 			</div>
 			
-			<div id="lg_psw">
+			<div id="lg_psw"> 
 				<span></span>
-				<input type="text" name="lg_2" id="lg_2" placeholder="请输入密码"/>
+				<input type="password" name="lg_2" id="lg_2" placeholder="请输入密码"/>  
 			</div>
 			<div id="lg_psw_xinxi_wrap">  
 				<div id="lg_psw_xinxi">
